# mamba-bissm

./: .gitignore  Makefile  README.md  display_table_window_selection_6_8_10.csv  display_table_zero_shot_8s_robustness.csv  display_table_zero_shot_8s_severe_neg6.csv  display_table_zero_shot_vs_noisy_training_4s_neg6.csv  figure_table_decision_plan.md  pyproject.toml
audits/: clean_full_matrix_dry_run_preflight_20260529.txt  cnn1d_parameter_count_preflight_20260529.md
configs/: bimamba_d128_n8_s16_fastpath_amp_100hz_win10s.yaml  binary_bilstm_100hz_win10s_stride2s.yaml  binary_bilstm_100hz_win4s_stride2s.yaml  binary_bilstm_100hz_win6s_stride2s.yaml  binary_bilstm_100hz_win8s_stride2s.yaml  binary_bimamba_2layer_100hz_win10s_stride2s.yaml  binary_bimamba_2layer_100hz_win4s_stride2s.yaml  binary_bimamba_2layer_100hz_win6s_stride2s.yaml  binary_bimamba_2layer_100hz_win8s_stride2s.yaml  binary_bissm_d64_n2_s32_100hz_win4s_stride2s.yaml  binary_bissm_d64_n2_s32_100hz_win6s_stride2s.yaml  binary_bissm_d64_n2_s32_100hz_win8s_stride2s.yaml  binary_bissm_d64_n2_s64_100hz_win4s_stride2s.yaml  binary_bissm_d64_n4_s64_100hz_win10s_stride2s.yaml  binary_bissm_reduced4_100hz_win4s_stride2s.yaml  binary_cnn1d_c256_n3_k7_100hz_win10s_stride2s.yaml  binary_cnn_baseline_100hz.yaml  binary_ecgmamba_100hz.yaml  binary_ecgmamba_100hz_win10s_stride2s.yaml  binary_ecgmamba_100hz_win4s_stride2s.yaml  binary_ecgmamba_100hz_win6s_stride2s.yaml  binary_ecgmamba_100hz_win8s_stride2s.yaml  binary_ecgmamba_500hz.yaml  binary_ecgmamba_bilstm_d64_n2_100hz_win10s_stride2s.yaml  mamba.yaml  (+18 more)
(+469 files in other folders)
