[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecgmamba-binary"
version = "0.1.0"
description = "Binary ECG classification pipeline with ECGMamba and baselines"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "mamba-ssm>=2.2.4",
  "numpy>=1.24",
  "pyarrow>=12.0",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
  "tqdm>=4.66"
]

[project.optional-dependencies]
speed = ["causal-conv1d>=1.4.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
